--- a/homeStyles.css
+++ b/homeStyles.css
@@ -24,7 +24,7 @@
 }
 
 .logo{
-    background-image: url("images/amazon_logo.png");
+    background-image: url("amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
