--- a/contactStyles.css
+++ b/contactStyles.css
@@ -305,7 +305,7 @@ ul a{
 }
 
 .logo{
-    background-image: url("images/amazon_logo.png");
+    background-image: url("amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100px;
